--- a/templates/user.html
+++ b/templates/user.html
@@ -1,3 +1,6 @@
+{% extends 'base.html' %}
+
+{%block content %}
 <h1>Hello {{ user_name | upper }}</h1>
 
 <h1>Hello {{ user_name | capitalize }}</h1>
@@ -7,3 +10,6 @@
 <h1>Thank God its working</h1>
 
 <h1>Dont fail me now</h1>
+
+
+{% endblock %}
